--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-joi-validation": "^6.0.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "kill-port": "^2.0.1",
     "mongoose": "^8.12.1",
