--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "nodemon": "^3.1.9",
     "pg": "^8.14.0",
     "postgres": "^3.4.5",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@types/node": "^22.13.10",
+    "@types/redis": "^4.0.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
