--- a/compose.yaml
+++ b/compose.yaml
@@ -9,11 +9,14 @@ services:
       NODE_ENV: production
       PORT: 9095
       JWT_SECRET: abcdefghi1475622
-      DB_HOST: postgres
+      DB_HOST: localhost
+      DB_HOST_PROD: postgres
       DB_PORT: 5432
       DB_USERNAME: postgres
       DB_PASSWORD: 123
-      REDIS_URL: redis://192.168.10.165:6379
+      REDIS_URL: redis://localhost:6379
+      REDIS_URL_PROD: redis://redis:6379
+
     ports:
       - "9095:9095"
     depends_on:
