--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts"
+    "start": "set NODE_ENV=production && ts-node index.ts",
+    "dev": "set NODE_ENV=development && nodemon index.ts"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-joi-validation": "^6.0.0",
+    "firebase": "^11.5.0",
+    "firebase-admin": "^13.2.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "kill-port": "^2.0.1",
